# TrustGameWebApp

./: .env
backend/: Product Requirements Document.md  README.md  api.py  hello.py  pyproject.toml
backend/config/: experiment_settings.json
backend/results/session_example/: summary_stats.json
backend/scripts/: main.py  play.py
backend/scripts/transactions/session_001/: transactions.jsonl
backend/transactions/session_001/: transactions.jsonl
backend/transactions/session_example/: pair_001.jsonl
docs/: blueprint.md
src/ai/: dev.ts
src/ai/flows/: trust-score-generation.ts
src/app/: globals.css  page.tsx
src/app/experiment/: page.tsx
src/app/experiment-explanation/: page.tsx
src/app/login/: page.tsx
src/app/register/: page.tsx
src/components/: PlayerASection.tsx  PlayerBSection.tsx
src/pages/: test-api.tsx
src/services/: trust-game.ts
