[project]
name = "modified-trust-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "pydantic>=2.11.3",
    "toml>=0.10.2",
    "uvicorn>=0.34.2",
]
